work-in-progress

--- a/.env-template
+++ b/.env-template
@@ -4,15 +4,37 @@
 
 # Discord bot token (REQUIRED)
 # From: Discord Developer Portal → Bot → Token
-BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN_HERE
+BOT_TOKEN="bot_token"
 
 # Discord application (client) ID (REQUIRED)
 # From: Discord Developer Portal → General Information → Application ID
-CLIENT_ID=YOUR_DISCORD_APPLICATION_ID_HERE
+CLIENT_ID="client_id" # Sandbox Testing Bot
 
 # Discord guild (server) ID for slash command registration (REQUIRED)
 # Enable Developer Mode in Discord → right-click server → Copy ID
-GUILD_ID=YOUR_DISCORD_GUILD_ID_HERE
+GUILD_ID="guild_id" # Sandbox Bot Testing
+
+# DB location and name
+MONITOR_DB_PATH="./data/monitor.db"
+
+
+########################################
+# RPC
+########################################
+
+SCAN_OVERLAP_BLOCKS=50
+# FLR Network - Scan
+FLR_MAINNET_SCAN="https://rpc.ankr.com/flare"
+FLR_MAINNET_SCAN_BLOCKS=1000 # rpc.ankr.com supports 1000
+FLR_MAINNET_SCAN_PAUSE_MS=250
+# FLR Network - Monitor / Heartbeat
+FLR_MAINNET="https://flare-api.flare.network/ext/C/rpc"
+# XDC Network - Scan
+XDC_MAINNET_SCAN="https://rpc.primenumbers.xyz/"
+XDC_MAINNET_SCAN_BLOCKS=2000
+XDC_MAINNET_SCAN_PAUSE_MS=250
+# XDC Network - Monitor / Heartbeat
+XDC_MAINNET="https://erpc.xinfin.network"
 
 
 ########################################
@@ -25,6 +47,7 @@ GUILD_ID=YOUR_DISCORD_GUILD_ID_HERE
 # 2 = info + warnings + errors
 # 3 = debug + info + warnings + errors
 DEBUG=2
+SCAN_DEBUG=2
 # Disable colors (CI, log files)
 # NO_COLOR=1
 # Force colors (Docker / piped output)
@@ -32,9 +55,81 @@ DEBUG=2
 
 
 ########################################
-# Scheduler / Example Jobs
+# Scheduler / Cron / Example Jobs
 ########################################
 
-# Interval (in minutes) for XRP price polling
-# Must be a positive integer
-PRICE_INTERVAL_MIN=5
+# Recommended production: CRON_SCHED="*/15 0-2,4-23 * * *"
+# Run every 15 minutes every hour of the day except 3 AM hour
+# MINUTES HOUR DayOfMonth Month DayOfWeek
+CRON_SCHED="*/15 0-2,4-23 * * *"
+HEARTBEAT_CRON="0 3 * * *"         # 3 AM local time (America/Los_Angeles)
+HEARTBEAT_TZ=America/Los_Angeles
+
+# TESTING
+#CRON_SCHED='*/2 * * * *'            # Testing every X minutes
+#HEARTBEAT_CRON="*/2 * * * *"        # Testing every X minutes
+
+
+########################################
+# CDP / LOANS LIQUIDATION/REDEMPTIONS
+########################################
+
+# Use POOL (on-chain) or ENV (manual override) for CDP price
+CDP_PRICE_MODE=POOL
+# Enosys V3 CDP/USD₮0 pool on Flare (Uniswap v3 style)
+CDP_POOL_ADDR_FLR=0x975f0369d31f1dd79abf057ad369ae7d5b9f6fb4
+# Fallback manual price if pool fetch fails
+CDP_PRICE_USD=0.998
+# threshold where redemptions become economically attractive:
+CDP_REDEMPTION_TRIGGER=0.995
+
+# Redemption IR tiers, in percentage points:
+# diff = (your IR) - (GLOBAL_IR_PROTOCOL)
+# Where to fetch global IR from
+GLOBAL_IR_URL="https://flrfinance.github.io/api.liquity.org-fork/v2/flare.json"
+GLOBAL_IR_BRANCHES="FXRP,WFLR"
+
+REDEMP_BELOW_HIGH=-0.5          # <= -0.5pp → HIGH redemption priority
+REDEMP_BELOW_MED=0              # (-0.5, 0] → MEDIUM redemption priority
+REDEMP_NEUTRAL_ABS=0.25         # |diff| <= 0.25pp → NEUTRAL; else LOW
+
+# Liquidation buffer tiers (fractions)
+LIQ_BUFFER_WARN=0.50   # <= buffer → MEDIUM
+LIQ_BUFFER_HIGH=0.30   # <= buffer → HIGH
+LIQ_BUFFER_CRIT=0.15   # <= buffer → CRITICAL
+# > 50% → LOW
+
+
+#############################################
+# LP RANGE TIER THRESHOLDS
+#############################################
+
+# In-range: how close (fraction of full tick width) before upgrading risk.
+# Example: 0.15 = MEDIUM when within 15% of an edge.
+LP_EDGE_WARN_FRAC=0.15
+# In-range: HIGH risk when extremely close to edge.
+# Example: 0.05 = HIGH when within 5% of the band boundary.
+LP_EDGE_HIGH_FRAC=0.05
+# Out-of-range: how far outside the band you are (as fraction of width).
+# Example: 0.5 = MEDIUM when within 0.5× width outside.
+LP_OUT_WARN_FRAC=0.5
+# Out-of-range: HIGH risk when 0.5–1.5× width outside.
+# Anything beyond this becomes CRITICAL.
+LP_OUT_HIGH_FRAC=1.5
+
+
+#############################################
+# LOAN ALERT MINIMUM TIERS
+#############################################
+
+# Loans: trigger liquidation alerts at or above this tier.
+# Options: LOW, MEDIUM, HIGH, CRITICAL, UNKNOWN
+LIQ_ALERT_MIN_TIER=MEDIUM
+# Loans: trigger redemption alerts at or above this tier
+# (still gated by CDP state = ACTIVE).
+# Options: LOW, NEUTRAL, MEDIUM, HIGH, UNKNOWN
+REDEMP_ALERT_MIN_TIER=HIGH
+# LPs: only alert when LP range tier is at/above this and
+# rangeStatus transitions out of IN_RANGE.
+# Options: LOW, MEDIUM, HIGH, CRITICAL, UNKNOWN
+LP_ALERT_MIN_TIER=MEDIUM
