ensure dev and main ignore db properly

--- a/.env-template
+++ b/.env-template
@@ -16,6 +16,7 @@ GUILD_ID="guild_id"
 
 # DB location and name
 MONITOR_DB_PATH="./data/monitor.db"
+#MONITOR_DB_PATH="./data/monitor.dev.db"
 
 # Ephemerals off for testing
 # 0 = Production (ephemerals where needed)
