rework alert logic, rework look and feel, add new testing command

--- a/.env-template
+++ b/.env-template
@@ -6,6 +6,10 @@
 # From: Discord Developer Portal → Bot → Token
 BOT_TOKEN="bot_token"
 
+# Bot environment (development | production)
+# Toggles testing/dev commands on/off
+BOT_ENV=production
+
 # Discord application (client) ID (REQUIRED)
 # From: Discord Developer Portal → General Information → Application ID
 CLIENT_ID="client_id"
@@ -15,8 +19,8 @@ CLIENT_ID="client_id"
 GUILD_ID="guild_id"
 
 # DB location and name
-MONITOR_DB_PATH="./data/monitor.db"
-#MONITOR_DB_PATH="./data/monitor.dev.db"
+MONITOR_DB_PATH="./data/monitor.db" # PROD
+#MONITOR_DB_PATH="./data/monitor.dev.db" # DEV
 
 # Ephemerals off for testing
 # 0 = Production (ephemerals where needed)
@@ -53,7 +57,7 @@ XDC_MAINNET="https://rpc.primenumbers.xyz/"
 # 2 = info + warnings + errors
 # 3 = debug + info + warnings + errors
 DEBUG=2
-SCAN_DEBUG=2
+SCAN_DEBUG=1
 # Disable colors (CI, log files)
 # NO_COLOR=1
 # Force colors (Docker / piped output)
@@ -67,7 +71,7 @@ SCAN_DEBUG=2
 # Recommended production: CRON_SCHED="*/15 0-2,4-23 * * *"
 # Run every 15 minutes every hour of the day except 3 AM hour
 # MINUTES HOUR DayOfMonth Month DayOfWeek
-CRON_SCHED="*/15 0-2,4-23 * * *"
+CRON_SCHED="*/10 0-2,4-23 * * *"
 HEARTBEAT_CRON="0 3 * * *"         # 3 AM local time (America/Los_Angeles)
 HEARTBEAT_TZ=America/Los_Angeles
 
@@ -95,9 +99,8 @@ CDP_REDEMPTION_TRIGGER=0.995
 GLOBAL_IR_URL="https://flrfinance.github.io/api.liquity.org-fork/v2/flare.json"
 GLOBAL_IR_BRANCHES="FXRP,WFLR"
 
-REDEMP_BELOW_HIGH=-0.5          # <= -0.5pp → HIGH redemption priority
-REDEMP_BELOW_MED=0              # (-0.5, 0] → MEDIUM redemption priority
-REDEMP_NEUTRAL_ABS=0.25         # |diff| <= 0.25pp → NEUTRAL; else LOW
+REDEMP_BELOW_CRITICAL=-1.0      # <= -1.0pp → CRITICAL
+REDEMP_ABOVE_MED=0.25           # (0, 0.25]pp → MEDIUM; else LOW
 
 # Liquidation buffer tiers (fractions)
 LIQ_BUFFER_WARN=0.50   # <= buffer → MEDIUM
@@ -134,7 +137,6 @@ LIQ_ALERT_MIN_TIER=MEDIUM
 # Loans: trigger redemption alerts at or above this tier
 # (still gated by CDP state = ACTIVE).
 # Options: LOW, NEUTRAL, MEDIUM, HIGH, UNKNOWN
-REDEMP_ALERT_MIN_TIER=HIGH
 # LPs: only alert when LP range tier is at/above this and
 # rangeStatus transitions out of IN_RANGE.
 # Options: LOW, MEDIUM, HIGH, CRITICAL, UNKNOWN
@@ -148,13 +150,22 @@ LP_ALERT_MIN_TIER=MEDIUM
 LP_OOR_DEBOUNCE_SEC=300        # 5 minutes before "OUT OF RANGE" alert
 LP_IN_DEBOUNCE_SEC=600         # 10 minutes before "BACK IN RANGE" alert
 LP_ALERT_COOLDOWN_SEC=1800     # 30 minutes minimum between alerts (prevents churn)
+#LP_OOR_DEBOUNCE_SEC=1        # TESTING
+#LP_IN_DEBOUNCE_SEC=2         # TESTING
+#LP_ALERT_COOLDOWN_SEC=3      # TESTING
 
 # LOAN liquidation alert debouncing (seconds)
 LOAN_LIQ_DEBOUNCE_SEC=240           # 4 minutes sustained risk before "NEW"
 LOAN_LIQ_RESOLVE_DEBOUNCE_SEC=360   # 6 minutes sustained safe before "RESOLVED"
 LOAN_LIQ_ALERT_COOLDOWN_SEC=1800    # 30 min cooldown between notifies (prevents flap spam)
+#LOAN_LIQ_DEBOUNCE_SEC=1           # TESTING
+#LOAN_LIQ_RESOLVE_DEBOUNCE_SEC=2   # TESTING
+#LOAN_LIQ_ALERT_COOLDOWN_SEC=3     # TESTING
 
 # LOAN redemption alert debouncing (seconds)
 LOAN_REDEMP_DEBOUNCE_SEC=300         # 5 minutes sustained candidate before "NEW"
 LOAN_REDEMP_RESOLVE_DEBOUNCE_SEC=600 # 10 minutes sustained non-candidate before resolve
 LOAN_REDEMP_ALERT_COOLDOWN_SEC=3600  # 60 min cooldown (redemption churn is common)
+#LOAN_REDEMP_DEBOUNCE_SEC=1         # TESTING
+#LOAN_REDEMP_RESOLVE_DEBOUNCE_SEC=2 # TESTING
+#LOAN_REDEMP_ALERT_COOLDOWN_SEC=3   # TESTING
