major schema change reducing RPC calls and moving data to DB for faster query, debt-ahead redemption risk replaces proxy interest rate approach

--- a/.env-template
+++ b/.env-template
@@ -75,6 +75,9 @@ CRON_SCHED="*/10 0-2,4-23 * * *"
 HEARTBEAT_CRON="0 3 * * *"         # 3 AM local time (America/Los_Angeles)
 HEARTBEAT_TZ=America/Los_Angeles
 
+# Snapshot staleness warning (minutes)
+SNAPSHOT_STALE_WARN_MIN=20
+
 # TESTING
 #CRON_SCHED='*/2 * * * *'            # Testing every X minutes
 #HEARTBEAT_CRON="*/2 * * * *"        # Testing every X minutes
@@ -101,6 +104,11 @@ GLOBAL_IR_BRANCHES="FXRP,WFLR"
 
 REDEMP_BELOW_CRITICAL=-1.0      # <= -1.0pp → CRITICAL
 REDEMP_ABOVE_MED=0.25           # (0, 0.25]pp → MEDIUM; else LOW
+
+# Redemption tiers (debt-ahead fraction; higher = safer)
+REDEMP_DEBT_AHEAD_LOW_PCT=0.70
+REDEMP_DEBT_AHEAD_MED_PCT=0.40
+REDEMP_DEBT_AHEAD_HIGH_PCT=0.20
 
 # Liquidation buffer tiers (fractions)
 LIQ_BUFFER_WARN=0.50   # <= buffer → MEDIUM
