add firelight status signal

--- a/.env-template
+++ b/.env-template
@@ -78,6 +78,19 @@ HEARTBEAT_TZ=America/Los_Angeles
 # Snapshot staleness warning (minutes)
 SNAPSHOT_STALE_WARN_MIN=20
 
+########################################
+# Firelight Vault Signal
+########################################
+
+# Firelight channel (single message will be edited in place)
+FIRELIGHT_CHANNEL_ID="channel_id"
+
+# Firelight poll cadence (minutes)
+FIRELIGHT_POLL_MIN=10
+
+# Firelight vault (FXRP)
+FIRELIGHT_VAULT_ADDRESS="0x4C18Ff3C89632c3Dd62E796c0aFA5c07c4c1B2b3"
+
 # TESTING
 #CRON_SCHED='*/2 * * * *'            # Testing every X minutes
 #HEARTBEAT_CRON="*/2 * * * *"        # Testing every X minutes
