Add redemption-rate snapshots + tuning gates, improve LP snapshot handling, and refine command embeds

--- a/.env-template
+++ b/.env-template
@@ -78,6 +78,21 @@ HEARTBEAT_TZ=America/Los_Angeles
 # Snapshot staleness warning (minutes)
 SNAPSHOT_STALE_WARN_MIN=20
 
+# Snapshot refresh tuning (scan job)
+# Skip redemption-rate snapshot if last run is recent
+REDEMP_SNAPSHOT_MINUTES=30
+
+# Enable/disable debt delta gate for redemption snapshots (0|1)
+# Use only if RPC is unhappy, could hide redemption risk
+REDEMP_SNAPSHOT_DEBT_GATE_ENABLED=0
+# Skip redemption-rate snapshot if total debt changed less than this %
+REDEMP_SNAPSHOT_MIN_DEBT_DELTA_PCT=0.25
+
+# Skip redemption-rate snapshot if no loan positions exist for the contract
+REDEMP_SNAPSHOT_REQUIRE_LOANS=1
+# Skip LP snapshot refresh if last run is recent (minutes)
+LP_SNAPSHOT_MINUTES=10
+
 # TESTING
 #CRON_SCHED='*/2 * * * *'            # Testing every X minutes
 #HEARTBEAT_CRON="*/2 * * * *"        # Testing every X minutes
