DB‑first monitoring with RPC fallback; heartbeat filters inactive LPs; redemption‑rate tweaks (avg‑IR change fee, directional tier rounding, clearer debt‑ahead wording) and IR‑proxy retirement.

--- a/.env-template
+++ b/.env-template
@@ -124,14 +124,11 @@ CDP_PRICE_USD=0.998
 # threshold where redemptions become economically attractive:
 CDP_REDEMPTION_TRIGGER=0.995
 
-# Redemption IR tiers, in percentage points:
-# diff = (your IR) - (GLOBAL_IR_PROTOCOL)
+# Global IR (used for display + change-fee calculation)
 # Where to fetch global IR from
 GLOBAL_IR_URL="https://flrfinance.github.io/api.liquity.org-fork/v2/flare.json"
 GLOBAL_IR_BRANCHES="FXRP,WFLR"
 
-REDEMP_BELOW_CRITICAL=-1.0      # <= -1.0pp → CRITICAL
-REDEMP_ABOVE_MED=0.25           # (0, 0.25]pp → MEDIUM; else LOW
 
 # Redemption tiers (debt-ahead fraction; higher = safer)
 REDEMP_DEBT_AHEAD_LOW_PCT=0.70
