add user-settable heartbeat schedule

--- a/.env-template
+++ b/.env-template
@@ -68,12 +68,11 @@ SCAN_DEBUG=1
 # Scheduler / Cron / Example Jobs
 ########################################
 
-# Recommended production: CRON_SCHED="*/15 0-2,4-23 * * *"
-# Run every 15 minutes every hour of the day except 3 AM hour
+# Recommended production: CRON_SCHED="*/15 * * * *"
+# Run every 15 minutes every hour of the day
 # MINUTES HOUR DayOfMonth Month DayOfWeek
-CRON_SCHED="*/10 0-2,4-23 * * *"
-HEARTBEAT_CRON="0 3 * * *"         # 3 AM local time (America/Los_Angeles)
-HEARTBEAT_TZ=America/Los_Angeles
+CRON_SCHED="*/10 * * * *"
+HEARTBEAT_CRON="0 * * * *"         # Hourly (per-user schedule)
 
 # Snapshot staleness warning (minutes)
 SNAPSHOT_STALE_WARN_MIN=20
